--- a/Source/IntContest.csproj
+++ b/Source/IntContest.csproj
@@ -27,6 +27,8 @@
         <PackageReference Include="CelesteMod.Publicizer" Version="*" CelesteAssembly="$(CelestePrefix)\Celeste.dll" />
         <Reference Include="$(CelestePrefix)\MMHOOK_Celeste.dll" Private="false" />
         <Reference Include="$(CelestePrefix)\FNA.dll" Private="false" />
+
+        <Reference Include="lib\MaxHelpingHand.dll" Private="false" />
     </ItemGroup>
 
     <Target Name="CopyFiles" AfterTargets="Build" Inputs="$(OutputPath)\$(AssemblyName).dll;$(OutputPath)\$(AssemblyName).pdb" Outputs="..\Code\bin\$(AssemblyName).dll;..\Code\bin\$(AssemblyName).pdb">
