--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,13 @@
       "group": {
         "kind": "build",
         "isDefault": true
+      },
+      "isBuildCommand": true,
+      "presentation": {
+        "echo": true,
+        "reveal": "silent",
+        "showReuseMessage": true,
+        "clear": false
       }
     }
   ]
