--- a/everest.yaml
+++ b/everest.yaml
@@ -1,8 +1,12 @@
 - Name: Microlith57_IntContest24
-  Version: 0.1.0
   DLL: Code/bin/Microlith57_IntContest24.dll
+  Version: 0.1.0
   Dependencies:
-    - Name: EverestCore
-      Version: 1.4673.0
-    - Name: MaxHelpingHand
-      Version: 1.30.8
+  - Name: EverestCore
+    Version: 1.4673.0
+  - Name: MaxHelpingHand
+    Version: 1.30.8
+  - Name: JungleHelper
+    Version: 1.3.2
+  - Name: VortexHelper
+    Version: 1.2.16
