--- a/.everestignore
+++ b/.everestignore
@@ -3,5 +3,11 @@
 # make sure to also include the .everestignore file in the zip by adding it
 # to the ZippedFiles tag in the .csproj file, or the artifact paths in the
 # Github workflow file if you're using GitHub actions for publishing.
+.git/
+.vscode/
 Source/
+.editorconfig
+.gitignore
+IntContest.sln
+README.md
 Microlith57_IntContest24.zip
