--- a/everest.yaml
+++ b/everest.yaml
@@ -6,7 +6,7 @@
     Version: 1.4673.0
   - Name: MaxHelpingHand
     Version: 1.30.8
-  - Name: JungleHelper
-    Version: 1.3.2
   - Name: VortexHelper
     Version: 1.2.16
+  - Name: ExtendedVariantMode
+    Version: 0.39.0
