--- a/Source/IntContest.csproj
+++ b/Source/IntContest.csproj
@@ -29,6 +29,7 @@
         <Reference Include="$(CelestePrefix)\FNA.dll" Private="false" />
 
         <Reference Include="lib\MaxHelpingHand.dll" Private="false" />
+        <Reference Include="lib\GravityHelper.dll" Private="false" />
     </ItemGroup>
 
     <Target Name="CopyFiles" AfterTargets="Build" Inputs="$(OutputPath)\$(AssemblyName).dll;$(OutputPath)\$(AssemblyName).pdb" Outputs="..\Code\bin\$(AssemblyName).dll;..\Code\bin\$(AssemblyName).pdb">
