--- a/everest.yaml
+++ b/everest.yaml
@@ -12,3 +12,7 @@
     Version: 0.39.0
   - Name: GravityHelper
     Version: 1.2.18
+  - Name: FrostHelper
+    Version: 1.52.2
+  - Name: bitsbolts
+    Version: 1.3.3
