me when i rebrand

--- a/.everestignore
+++ b/.everestignore
@@ -8,6 +8,6 @@
 Source/
 .editorconfig
 .gitignore
-IntContest.sln
+Microlith57Misc.sln
 README.md
-Microlith57_IntContest24.zip
+Microlith57MiscellaneousMechanics.zip
