--- a/everest.yaml
+++ b/everest.yaml
@@ -1,10 +1,11 @@
 - Name: Microlith57MiscellaneousMechanics
   DLL: Code/bin/Microlith57MiscellaneousMechanics.dll
-  Version: 0.1.0
+  Version: 1.0.0
   Dependencies:
-  - Name: EverestCore
-    Version: 1.4673.0
-  - Name: MaxHelpingHand
-    Version: 1.30.8
-  - Name: GravityHelper
-    Version: 1.2.18
+    - Name: EverestCore
+      Version: 1.4673.0
+  OptionalDependencies:
+    - Name: MaxHelpingHand
+      Version: 1.30.8
+    - Name: GravityHelper
+      Version: 1.2.18
