--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Download Everest stripped lib
       uses: robinraju/release-downloader@v1.4
@@ -24,7 +24,9 @@ jobs:
       run: unzip lib-stripped.zip
 
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 7.x
     - name: Install dependencies
       run: dotnet restore
     - name: Build
@@ -33,7 +35,7 @@ jobs:
         CelestePrefix: ${{ github.workspace }}/lib-stripped
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
-        name: CelesteMod
+        name: Microlith57MiscellaneousMechanics
         path: Microlith57MiscellaneousMechanics.zip
