add eeveehelper holdable container support to holdable bouyancy regions

--- a/Source/Microlith57Misc.csproj
+++ b/Source/Microlith57Misc.csproj
@@ -30,6 +30,7 @@
 
         <Reference Include="lib\MaxHelpingHand.dll" Private="false" />
         <Reference Include="lib\GravityHelper.dll" Private="false" />
+        <Reference Include="lib\EeveeHelper.dll" Private="false" />
     </ItemGroup>
 
     <Target Name="CopyFiles" AfterTargets="Build" Inputs="$(OutputPath)\$(AssemblyName).dll;$(OutputPath)\$(AssemblyName).pdb" Outputs="..\Code\bin\$(AssemblyName).dll;..\Code\bin\$(AssemblyName).pdb">
